--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ponypharmacist/atlas-ui-kit",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "Atlas ui kit test run",
   "author": "ponypharmacist",
   "license": "MIT",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@mdi/svg": "^5.9.55",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -46,6 +47,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "minimist": "^1.2.5",
     "rollup": "^2.36.1",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.9",
     "sass-loader": "^8.0.2",
