--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@ponypharmacist/atlas-ui-kit",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "description": "Atlas ui kit test run",
   "author": "ponypharmacist",
   "license": "MIT",
   "private": false,
-  "main": "dist/atlas-ui-kit.ssr.js",
+  "main": "dist/atlas-ui-kit.esm.js",
   "browser": "dist/atlas-ui-kit.esm.js",
   "module": "dist/atlas-ui-kit.esm.js",
   "unpkg": "dist/atlas-ui-kit.min.js",
