--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "ponypharmacist",
   "license": "MIT",
   "private": false,
-  "main": "dist/atlas-ui-kit.esm.js",
+  "main": "dist/atlas-ui-kit.ssr.js",
   "browser": "dist/atlas-ui-kit.esm.js",
   "module": "dist/atlas-ui-kit.esm.js",
   "unpkg": "dist/atlas-ui-kit.min.js",
@@ -26,7 +26,11 @@
     "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife",
     "lint": "vue-cli-service lint"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.20",
+    "v-mask": "^2.2.4",
+    "v-tooltip": "^2.0.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
