--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@mdi/svg": "^5.9.55",
     "lodash": "^4.17.20",
     "v-mask": "^2.2.4",
