--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@mdi/svg": "^5.9.55",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "v-calendar": "^2.2.4",
     "v-mask": "^2.2.4",
     "v-tooltip": "^2.0.3",
     "verte": "^0.0.12",
     "vue-clickaway": "^2.2.2",
+    "vue-slider-component": "^3.2.14",
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
