--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ponypharmacist/atlas-ui-kit",
-  "version": "0.2.37",
+  "version": "0.2.38",
   "description": "Atlas ui kit test run",
   "author": "ponypharmacist",
   "license": "MIT",
@@ -29,6 +29,17 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@mdi/svg": "^5.9.55",
+    "@tiptap/core": "^2.0.0-beta.86",
+    "@tiptap/extension-highlight": "^2.0.0-beta.21",
+    "@tiptap/extension-image": "^2.0.0-beta.14",
+    "@tiptap/extension-link": "^2.0.0-beta.18",
+    "@tiptap/extension-table": "^2.0.0-beta.25",
+    "@tiptap/extension-table-cell": "^2.0.0-beta.13",
+    "@tiptap/extension-table-header": "^2.0.0-beta.15",
+    "@tiptap/extension-table-row": "^2.0.0-beta.13",
+    "@tiptap/extension-typography": "^2.0.0-beta.14",
+    "@tiptap/starter-kit": "^2.0.0-beta.82",
+    "@tiptap/vue-2": "^2.0.0-beta.39",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "v-calendar": "^2.2.4",
