--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ponypharmacist/atlas-ui-kit",
-  "version": "0.2.41",
+  "version": "0.3.01",
   "description": "Atlas ui kit test run",
   "author": "ponypharmacist",
   "license": "MIT",
@@ -33,6 +33,8 @@
     "@tiptap/extension-highlight": "^2.0.0-beta.21",
     "@tiptap/extension-image": "^2.0.0-beta.14",
     "@tiptap/extension-link": "^2.0.0-beta.18",
+    "@tiptap/extension-subscript": "^2.0.0-beta.9",
+    "@tiptap/extension-superscript": "^2.0.0-beta.9",
     "@tiptap/extension-table": "^2.0.0-beta.25",
     "@tiptap/extension-table-cell": "^2.0.0-beta.13",
     "@tiptap/extension-table-header": "^2.0.0-beta.15",
