--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@tiptap/vue-2": "^2.0.0-beta.39",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "prosemirror-utils": "^0.9.6",
     "v-calendar": "^2.2.4",
     "v-mask": "^2.2.4",
     "v-tooltip": "^2.0.3",
